<resources>
    <string name="app_name">HomingPigeon</string>

    <!--Title/Menu-->
    <string name="new_chat">New Chat</string>
    <string name="new_contact">New Contact</string>
    <string name="new_group">New Group</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="blocked_list">Blocked List</string>
    <string name="group_subject">Group Subject</string>
    <string name="see_price_list">See price list</string>
    <string name="see_price_list_icon">👀</string>
    <string name="read_expert_notes">Read expert’s notes</string>
    <string name="read_expert_notes_icon">🔍</string>
    <string name="send_services">Send services</string>
    <string name="send_services_icon">💌</string>
    <string name="create_order_card">Create order card</string>
    <string name="create_order_card_icon">✏️</string>
    <string name="recent">Recent</string>
    <string name="search_results">Search Results</string>
    <string name="notifications">Notifications</string>
    <string name="conversation_color">Conversation Color</string>
    <string name="block_user">Block User</string>
    <string name="view_members">View Members</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="exit_group">Exit Group</string>
    <string name="shared_media">Shared Media</string>

    <!--Chat Room List-->
    <string name="setting_up_your_chatroom">Setting up your chatroom</string>
    <string name="make_sure_you_have_a_stable_connection">Make sure you have a stable connection</string>
    <string name="search_chat_placeholder">Search chats, groups, or contacts</string>

    <!--Contacts-->
    <string name="search_for_contacts">Search for Contacts</string>
    <string name="cant_find_contact">Can’t find the contact you were looking for?</string>
    <string name="cant_find_person">Can’t find who you are looking for?</string>
    <string name="view_blocked_contacts">View Blocked Contacts</string>
    <string name="search_by_username">Search by Username</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="this_is_you">This is you</string>
    <string name="you_have_added">You have added </string>
    <string name="to_your_contacts"> to your contacts</string>
    <string name="is_already_in_your_contacts">is already in your contacts</string>

    <!--Connection Status-->
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="offline">Offline</string>
    <string name="network_error">Network Error</string>
    <string name="waiting_for_network">Waiting for Network</string>
    <string name="active_now">Active now</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_seen_recently">Last seen recently</string>
    <string name="sent_yesterday_at">Sent yesterday at %s</string>
    <string name="minute_ago">%d minute ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hour_ago">%d hour ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="last_seen_yesterday_at">Last seen yesterday at %s</string>
    <string name="day_ago">%d day ago</string>
    <string name="days_ago">%d days ago</string>
    <string name="last_seen_a_week_ago">Last seen a week ago</string>
    <string name="last_seen">Last seen %s</string>

    <!--Group Chat-->
    <string name="group_member_count">Group Members (%d/%d)</string>
    <string name="group_name">Group Name</string>
    <string name="group_picture">Group Picture</string>
    <string name="create_group">Create Group</string>
    <string name="type_group_name">Type group name</string>
    <string name="cannot_add_more_people">Cannot add more people</string>
    <string name="group_limit_reached">The max limit number of people in one group chat has been reached</string>

    <!--Guides-->
    <string name="new_chat_guide">You can start a new chat by tapping the icon on the bottom right corner</string>
    <string name="scan_qr_code_guide">To scan other\'s QR code, please tap the button below</string>
    <string name="search_username_welcome_message">Usernames are <b>case sensitive</b>, so make sure you input correctly</string>
    <string name="change_group_image_guide">Tap icon to change group profile image</string>
    <string name="chat_other_user_is_expert"><![CDATA[<b><font color=\'#784198\'>%s</font></b> is an expert don\'t forget to check out his/her services!]]></string>

    <!--Error Message-->
    <string name="error">Error</string>
    <string name="error_message_general">Something went wrong, please try again.</string>
    <string name="could_not_find_any_results">Could not find any results</string>
    <string name="failed_to_load_image">Failed to load image.</string>
    <string name="message_send_failed">Failed to send, tap to retry</string>
    <string name="error_message_group_name_empty">Please enter a group name.</string>
    <string name="internet_connection_lost">Internet Connection Lost</string>
    <string name="please_check_your_connection">Please check your connection</string>
    <string name="no_internet_show_error">Oops! It seems like you are offline, please check your connection.</string>
    <string name="api_call_return_error">Oops! there is an error, please try again later.</string>

    <!--Attachment-->
    <string name="document">Document</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="audio">Audio</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>

    <!--Product/Order-->
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="recipient">Recipient</string>
    <string name="courier">Courier</string>
    <string name="notes">Notes</string>
    <string name="additional_cost">Additional Cost</string>
    <string name="discount">Discount</string>
    <string name="total_price">Total Price</string>
    <string name="order_now">Order Now</string>
    <string name="no_review_yet">No review yet</string>
    <string name="order_quantity">Quantity: </string>
    <string name="order_more_items">And %d More Items</string>
    <string name="view_your_order_status">View your order status</string>
    <string name="order_status_guide_1">The Expert has marked this order as finished.</string>
    <string name="order_status_guide_2">Please continue to review.\nIf the status is not suitable, you can</string>
    <string name="order_status_guide_3">report this order.</string>

    <!--Intent-->
    <string name="intent_pick_image">image/*</string>
    <string name="intent_select_picture">Select Picture</string>

    <!--General-->
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="chat_now">Chat Now</string>
    <string name="chats_and_contacts">Chats and Contacts</string>
    <string name="clear_history">Clear history</string>
    <string name="continue_s">Continue</string>
    <string name="delivered_at">Delivered at</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="highlighted_string"><![CDATA[<font color=\'#2eccad\'>%s</font>]]></string>
    <string name="messages">Messages</string>
    <string name="no_chats">No Chats</string>
    <string name="ok">OK</string>
    <string name="oops">Oops…</string>
    <string name="reply">Reply</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="sending">Sending…</string>
    <string name="send_a_message">Send a message…</string>
    <string name="sent_at">Sent at</string>
    <string name="unread_messages">Unread Messages</string>
    <string name="you">You</string>
    <string name="over_99">99+</string>
</resources>
