<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".View.Activity.GroupSubjectActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="2dp"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/iv_button_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ic_back_white"
            android:tint="@color/greenBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/HomingPigeonToolbarTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="?attr/actionBarSize"
            android:text="@string/group_subject"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_button_back"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_member_count"
        style="@style/HomingPigeonSectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_action_bar"
        tools:text="Group Members (5/50)" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_group_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_member_count" />

    <View
        android:id="@+id/v_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/grey_d9"
        app:layout_constraintTop_toBottomOf="@id/rv_group_members" />

    <TextView
        android:id="@+id/tv_label_group_picture"
        style="@style/HomingPigeonSectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/group_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_separator" />

    <com.moselo.HomingPigeon.Helper.CircleImageView
        android:id="@+id/civ_group_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_circle_d9d9d9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_group_picture" />

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera_transparent_grey"
        app:layout_constraintBottom_toBottomOf="@id/civ_group_image"
        app:layout_constraintEnd_toEndOf="@id/civ_group_image"
        app:layout_constraintStart_toStartOf="@id/civ_group_image"
        app:layout_constraintTop_toTopOf="@id/civ_group_image" />

    <TextView
        android:id="@+id/tv_label_change_group_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/latoregular"
        android:letterSpacing="-0.02"
        android:text="@string/change_group_image_guide"
        android:textColor="@color/black_44"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/civ_group_image" />

    <TextView
        android:id="@+id/tv_label_group_name"
        style="@style/HomingPigeonSectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/group_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_change_group_image" />

    <EditText
        android:id="@+id/et_group_name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_f5f5f5_white_270_stroke_e4e4e4_1dp_rounded_8dp"
        android:fontFamily="@font/latoregular"
        android:gravity="center"
        android:hint="@string/type_group_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:letterSpacing="-0.02"
        android:maxLines="1"
        android:textColor="@color/black_44"
        android:textColorHint="@color/grey_9b"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_group_name" />

    <Button
        android:id="@+id/btn_create_group"
        style="@style/HomingPigeonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/create_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>