<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_f8"
    tools:context=".View.Activity.TAPNewChatActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="2dp"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/iv_button_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/hp_ic_back_green_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/HomingPigeonToolbarTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_button_search"
            app:layout_constraintStart_toEndOf="@id/iv_button_back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_button_search"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/hp_ic_search_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_title"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_new_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_button_new_contact"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/white"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/hp_ic_new_contact_green" />

                <TextView
                    style="@style/HomingPigeonMenuLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/new_contact" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_ea" />

            <LinearLayout
                android:id="@+id/ll_button_scan_qr"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/white"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/hp_ic_scan_green" />

                <TextView
                    style="@style/HomingPigeonMenuLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/scan_qr_code" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_ea" />

            <LinearLayout
                android:id="@+id/ll_button_new_group"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/white"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/hp_ic_new_group_green" />

                <TextView
                    style="@style/HomingPigeonMenuLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/new_group" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_contact_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <LinearLayout
                android:id="@+id/ll_blocked_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hp_font_neueeinstellungregular"
                    android:gravity="center"
                    android:text="@string/cant_find_contact"
                    android:textColor="@color/grey_9b"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hp_font_neueeinstellungbold"
                    android:gravity="center"
                    android:text="@string/view_blocked_contacts"
                    android:textColor="@color/grey_9b"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>