<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_f8"
    android:orientation="vertical"
    tools:context=".View.Activity.SampleNewChatActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_action_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/iv_button_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="12dp"
            android:src="@drawable/ic_back_white"
            android:tint="@color/greenBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/neueeinstellungbold"
            android:gravity="center"
            android:letterSpacing="-0.02"
            android:maxLines="1"
            android:text="@string/new_chat"
            android:textColor="@color/colorTextTitle"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_button_search"
            app:layout_constraintStart_toEndOf="@id/iv_button_back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_button_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="12dp"
            android:src="@drawable/ic_search_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_title"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_button_new_contact"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_new_contact_green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/latoregular"
            android:letterSpacing="-0.02"
            android:text="@string/new_contact"
            android:textColor="@color/colorTextTitle"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_ea" />

    <LinearLayout
        android:id="@+id/ll_button_scan_qr"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_scan_green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/latoregular"
            android:letterSpacing="-0.02"
            android:text="@string/scan_qr_code"
            android:textColor="@color/colorTextTitle"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_ea" />

    <LinearLayout
        android:id="@+id/ll_button_new_group"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_new_group_green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/latoregular"
            android:letterSpacing="-0.02"
            android:text="@string/new_group"
            android:textColor="@color/colorTextTitle"
            android:textSize="15sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_contact_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>