<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:elevation="2dp">

        <TextView
            android:id="@+id/tv_button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/edit"
            android:textSize="17sp"
            android:textColor="@color/greenBlue"
            android:fontFamily="@font/latoregular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        
        <LinearLayout
            android:id="@+id/ll_button_search"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/bg_white_stroke_e4_1dp_rounded_14dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_keyboard_arrow_down"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/search"
                android:textSize="13dp"
                android:textColor="@color/grey_9b"
                android:fontFamily="@font/latoregular"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_button_new_chat"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginEnd="8dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_sign_in"
            android:tint="@color/greenBlue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_connection_status"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/bg_status_connecting"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_connection_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecting"
            android:textSize="12dp"
            android:textColor="@color/white"
            android:fontFamily="@font/latobold"
            />

        <ProgressBar
            android:id="@+id/pb_connecting"
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:layout_marginStart="4dp"
            android:progressTint="@color/white"
            />

        <ImageView
            android:id="@+id/iv_connection_status"
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_sign_in"
            android:visibility="gone"
            />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_contact_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>